--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,11 @@ include(CPack)
 include_directories(.)
 include_directories(${Boost_INCLUDE_DIR})
 
-add_executable(test_std_set.cpp test_std_set.cpp)
-add_executable(test_flat_set.cpp test_flat_set.cpp)
-add_executable(test_tree.cpp test_tree.cpp)
-add_executable(test_flist.cpp test_flist.cpp)
-add_executable(test_sort.cpp sort.cpp)
+add_executable(test_std_set test_std_set.cpp)
+add_executable(test_flat_set test_flat_set.cpp)
+add_executable(test_bst test_tree.cpp)
+add_executable(test_flist test_flist.cpp)
+add_executable(test_sort sort.cpp)
 
 #target_link_libraries(test_nmea ${Boost_LIBRARIES})
-
 
