--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,13 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
 project(cpp_trainning)
 
-find_package(Boost "1.55.0" COMPONENTS program_options REQUIRED)
+find_package(Boost "1.55.0" COMPONENTS program_options OPTIONAL)
 
 enable_testing()
 include(CTest)
 include(CPack)
 
 include_directories(.)
-include_directories(${Boost_INCLUDE_DIR})
 
 add_executable(test_std_set tests/test_std_set.cpp)
 add_executable(test_bst tests/test_bst.cpp)
@@ -18,6 +17,7 @@ add_executable(test_sort tests/sort.cpp)
 add_executable(test_comp_count_sort tests/test_comp_count_sort.cpp)
 
 if (Boost_FOUND)
+  include_directories(${Boost_INCLUDE_DIR})
   add_executable(test_flat_set tests/test_flat_set.cpp)
 endif()
 
