--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ include(CPack)
 include_directories(.)
 
 add_executable(test_bst tests/test_bst.cpp)
+add_executable(test_bst_iterator tests/test_bst_iterator.cpp)
 add_executable(test_flist tests/test_flist.cpp)
 add_executable(test_sort tests/sort.cpp)
 add_executable(test_comp_count_sort tests/test_comp_count_sort.cpp)
@@ -24,4 +25,5 @@ endif()
 
 add_test(NAME test_comp_count_sort COMMAND test_comp_count_sort)
 add_test(NAME test_bst COMMAND test_bst)
+add_test(NAME test_bst_iterator COMMAND test_bst_iterator)
 
