--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
 project(rtcpp)
 
-find_package(Boost "1.55.0" COMPONENTS timer system program_options REQUIRED)
+find_package(Boost "1.55.0" COMPONENTS timer system program_options OPTIONAL)
 
 enable_testing()
 include(CTest)
@@ -14,11 +14,11 @@ add_executable(test_bst tests/test_bst.cpp)
 add_executable(test_bst_iterator tests/test_bst_iterator.cpp)
 add_executable(test_flist tests/test_flist.cpp)
 
-if (Boost_FOUND)
-  include_directories(${Boost_INCLUDE_DIR})
+#if (Boost_FOUND)
+#  include_directories(${Boost_INCLUDE_DIR})
   add_executable(bench_bst benchmarks/bench_bst.cpp)
-  target_link_libraries(bench_bst ${Boost_LIBRARIES})
-endif()
+#  target_link_libraries(bench_bst ${Boost_LIBRARIES})
+#endif()
 
 add_test(NAME test_bst COMMAND test_bst)
 add_test(NAME test_bst_iterator COMMAND test_bst_iterator)
