Removal of bst_node default constructor.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(.)
 add_executable(test_bst tests/test_bst.cpp)
 add_executable(test_bst_iterator tests/test_bst_iterator.cpp)
 add_executable(test_flist tests/test_flist.cpp)
+add_executable(test_reverse tests/test_reverse.cpp)
 
 #if (Boost_FOUND)
 #  include_directories(${Boost_INCLUDE_DIR})
@@ -22,4 +23,5 @@ add_executable(test_flist tests/test_flist.cpp)
 
 add_test(NAME test_bst COMMAND test_bst)
 add_test(NAME test_bst_iterator COMMAND test_bst_iterator)
+add_test(NAME test_reverse COMMAND test_reverse)
 
