--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ include(CPack)
 
 include_directories(.)
 
-add_executable(test_bst tests/test_bst.cpp)
-add_executable(test_bst_iterator tests/test_bst_iterator.cpp)
+add_executable(test_set tests/test_set.cpp)
+add_executable(test_set_iterator tests/test_set_iterator.cpp)
 add_executable(test_flist tests/test_flist.cpp)
 add_executable(test_align tests/test_align.cpp)
 add_executable(test_reverse tests/test_reverse.cpp)
@@ -21,12 +21,12 @@ add_executable(example3 examples/example3.cpp)
 
 #if (Boost_FOUND)
 #  include_directories(${Boost_INCLUDE_DIR})
-  add_executable(bench_bst benchmarks/bench_bst.cpp)
-#  target_link_libraries(bench_bst ${Boost_LIBRARIES})
+  add_executable(bench_set benchmarks/bench_set.cpp)
+#  target_link_libraries(bench_set ${Boost_LIBRARIES})
 #endif()
 
-add_test(NAME test_bst COMMAND test_bst)
-add_test(NAME test_bst_iterator COMMAND test_bst_iterator)
+add_test(NAME test_set COMMAND test_set)
+add_test(NAME test_set_iterator COMMAND test_set_iterator)
 add_test(NAME test_reverse COMMAND test_reverse)
 add_test(NAME test_align COMMAND test_align)
 add_test(NAME example1 COMMAND example1)
