Addition of benchmark for lists.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(${PROJECT_BINARY_DIR})
 
 if (UNIX)
   add_executable(bench_set benchmarks/bench_set.cpp)
+  add_executable(bench_list benchmarks/bench_list.cpp)
   add_executable(test_set tests/test_set.cpp)
   add_test(NAME test_set COMMAND test_set)
 endif (UNIX)
@@ -30,7 +31,6 @@ add_executable(example1 examples/example1.cpp)
 add_executable(example2 examples/example2.cpp)
 add_executable(example3 examples/example3.cpp)
 add_executable(example4 examples/example4.cpp)
-add_executable(bench_map benchmarks/bench_map.cpp)
 
 if (Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIR})
