Addition of matrix class with static allocation of its data.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(test_flist tests/test_flist.cpp)
 add_executable(test_align tests/test_align.cpp)
 add_executable(test_reverse tests/test_reverse.cpp)
 add_executable(test_alloc tests/test_alloc.cpp)
+add_executable(test_matrix tests/test_matrix.cpp)
 add_executable(example1 examples/example1.cpp)
 add_executable(example2 examples/example2.cpp)
 add_executable(example3 examples/example3.cpp)
@@ -40,6 +41,7 @@ endif()
 add_test(NAME test_reverse COMMAND test_reverse)
 add_test(NAME test_align COMMAND test_align)
 add_test(NAME test_alloc COMMAND test_alloc)
+add_test(NAME test_matrix COMMAND test_matrix)
 add_test(NAME example1 COMMAND example1)
 add_test(NAME example2 COMMAND example2)
 add_test(NAME example3 COMMAND example3)
