Renaming of example files to more descriptive names.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,11 +28,10 @@ add_executable(test_align tests/test_align.cpp)
 add_executable(test_reverse tests/test_reverse.cpp)
 add_executable(test_alloc tests/test_alloc.cpp)
 add_executable(test_matrix tests/test_matrix.cpp)
-add_executable(example1 examples/example1.cpp)
-add_executable(example2 examples/example2.cpp)
-add_executable(example3 examples/example3.cpp)
-add_executable(example4 examples/example4.cpp)
-add_executable(example5 examples/matrix_example1.cpp)
+add_executable(alloc_example1 examples/alloc_example1.cpp)
+add_executable(alloc_example2 examples/alloc_example2.cpp)
+add_executable(alloc_example3 examples/alloc_example3.cpp)
+add_executable(matrix_example1 examples/matrix_example1.cpp)
 
 if (Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIR})
@@ -43,9 +42,8 @@ add_test(NAME test_reverse COMMAND test_reverse)
 add_test(NAME test_align COMMAND test_align)
 add_test(NAME test_alloc COMMAND test_alloc)
 add_test(NAME test_matrix COMMAND test_matrix)
-add_test(NAME example1 COMMAND example1)
-add_test(NAME example2 COMMAND example2)
-add_test(NAME example3 COMMAND example3)
-add_test(NAME example4 COMMAND example4)
-add_test(NAME matrix_example COMMAND example5)
+add_test(NAME alloc_example1 COMMAND alloc_example1)
+add_test(NAME alloc_example2 COMMAND alloc_example2)
+add_test(NAME alloc_example3 COMMAND alloc_example3)
+add_test(NAME matrix_example COMMAND matrix_example1)
 
