Addition of two sorting algorithms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(test_align tests/test_align.cpp)
 add_executable(test_reverse tests/test_reverse.cpp)
 add_executable(test_alloc tests/test_alloc.cpp)
 add_executable(test_matrix tests/test_matrix.cpp)
+add_executable(test_comp_counting_sort tests/test_comp_counting_sort.cpp)
 add_executable(alloc_example1 examples/alloc_example1.cpp)
 add_executable(alloc_example2 examples/alloc_example2.cpp)
 add_executable(alloc_example3 examples/alloc_example3.cpp)
@@ -43,6 +44,7 @@ add_test(NAME test_reverse COMMAND test_reverse)
 add_test(NAME test_align COMMAND test_align)
 add_test(NAME test_alloc COMMAND test_alloc)
 add_test(NAME test_matrix COMMAND test_matrix)
+add_test(NAME test_comp_counting_sort COMMAND test_comp_counting_sort)
 add_test(NAME alloc_example1 COMMAND alloc_example1)
 add_test(NAME alloc_example2 COMMAND alloc_example2)
 add_test(NAME alloc_example3 COMMAND alloc_example3)
