--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,9 +36,10 @@ add_executable(test_matrix src/tests/test_matrix.cpp)
 add_executable(test_comp_counting_sort src/tests/test_comp_counting_sort.cpp)
 add_executable(test_dist_counting_sort src/tests/test_dist_counting_sort.cpp)
 add_executable(test_find_intrusive src/tests/test_find_intrusive.cpp)
-add_executable(alloc_example1 src/examples/alloc_example1.cpp)
-add_executable(alloc_example2 src/examples/alloc_example2.cpp)
-add_executable(alloc_example3 src/examples/alloc_example3.cpp)
+add_executable(alloc_example_list src/examples/alloc_example_list.cpp)
+add_executable(alloc_example_set src/examples/alloc_example_set.cpp)
+add_executable(alloc_example_many src/examples/alloc_example_many.cpp)
+add_executable(alloc_example_scoped src/examples/alloc_example_scoped.cpp)
 add_executable(matrix_example1 src/examples/matrix_example1.cpp)
 add_executable(bench_list_frag src/benchmarks/bench_list_frag.cpp)
 add_executable(bench_find src/benchmarks/bench_find.cpp)
@@ -56,8 +57,9 @@ add_test(NAME test_matrix COMMAND test_matrix)
 add_test(NAME test_comp_counting_sort COMMAND test_comp_counting_sort)
 add_test(NAME test_dist_counting_sort COMMAND test_dist_counting_sort)
 add_test(NAME test_find_intrusive COMMAND test_find_intrusive)
-add_test(NAME alloc_example1 COMMAND alloc_example1)
-add_test(NAME alloc_example2 COMMAND alloc_example2)
-add_test(NAME alloc_example3 COMMAND alloc_example3)
+add_test(NAME alloc_example_list COMMAND alloc_example_list)
+add_test(NAME alloc_example_set COMMAND alloc_example_set)
+add_test(NAME alloc_example_many COMMAND alloc_example_many)
+add_test(NAME alloc_example_scoped COMMAND alloc_example_scoped)
 add_test(NAME matrix_example COMMAND matrix_example1)
 
