Addition of condition for node types in the proposal.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(alloc_example_list src/examples/alloc_example_list.cpp)
 add_executable(alloc_example_set src/examples/alloc_example_set.cpp)
 add_executable(alloc_example_many src/examples/alloc_example_many.cpp)
 add_executable(alloc_example_scoped src/examples/alloc_example_scoped.cpp)
+add_executable(node_type_is_equal src/examples/node_type_is_equal.cpp)
 add_executable(matrix_example1 src/examples/matrix_example1.cpp)
 add_executable(bench_list_frag src/benchmarks/bench_list_frag.cpp)
 add_executable(bench_find src/benchmarks/bench_find.cpp)
@@ -61,5 +62,6 @@ add_test(NAME alloc_example_list COMMAND alloc_example_list)
 add_test(NAME alloc_example_set COMMAND alloc_example_set)
 add_test(NAME alloc_example_many COMMAND alloc_example_many)
 add_test(NAME alloc_example_scoped COMMAND alloc_example_scoped)
+add_test(NAME node_type_is_equal COMMAND node_type_is_equal)
 add_test(NAME matrix_example COMMAND matrix_example1)
 
