--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ add_executable(test_comp_counting_sort src/tests/test_comp_counting_sort.cpp)
 add_executable(test_dist_counting_sort src/tests/test_dist_counting_sort.cpp)
 add_executable(test_find_intrusive src/tests/test_find_intrusive.cpp)
 add_executable(alloc_example_list src/examples/alloc_example_list.cpp)
-add_executable(alloc_example_set src/examples/alloc_example_set.cpp)
+add_executable(unordered_alloc src/examples/unordered_alloc.cpp)
 add_executable(alloc_example_many src/examples/alloc_example_many.cpp)
 add_executable(alloc_example_scoped src/examples/alloc_example_scoped.cpp)
 add_executable(node_type_is_equal src/examples/node_type_is_equal.cpp)
@@ -59,7 +59,7 @@ add_test(NAME test_comp_counting_sort COMMAND test_comp_counting_sort)
 add_test(NAME test_dist_counting_sort COMMAND test_dist_counting_sort)
 add_test(NAME test_find_intrusive COMMAND test_find_intrusive)
 add_test(NAME alloc_example_list COMMAND alloc_example_list)
-add_test(NAME alloc_example_set COMMAND alloc_example_set)
+add_test(NAME unordered_alloc COMMAND unordered_alloc)
 add_test(NAME alloc_example_many COMMAND alloc_example_many)
 add_test(NAME alloc_example_scoped COMMAND alloc_example_scoped)
 add_test(NAME node_type_is_equal COMMAND node_type_is_equal)
